--- a/app/package.json
+++ b/app/package.json
@@ -8,7 +8,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-sass": "^1.0.1",
     "next": "10.0.9",
+    "node-sass": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   }
