--- a/app/package.json
+++ b/app/package.json
@@ -14,7 +14,5 @@
     "react-dom": "17.0.2",
     "sass": "^1.32.8"
   },
-  "devDependencies": {
-    "webpack-cli": "^4.5.0"
-  }
+  "devDependencies": {}
 }
