--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,10 @@
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
     "sass": "^1.32.8"
   },
   "devDependencies": {}
