--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.21.1",
+    "connected-react-router": "^6.9.1",
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -16,6 +17,8 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "sass": "^1.32.8"
   },
   "devDependencies": {}
