--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "next": "10.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-modal": "^3.12.1",
     "react-redux": "^7.2.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
